ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: #domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mywisecow-service
            port:
              number: 80
  tls:
  - hosts:
    - #mydomain name
    secretName: #screte name (wisecow-tls)
